--- a/Lesson-6/Sklearn.ipynb
+++ b/Lesson-6/Sklearn.ipynb
@@ -1202,25 +1202,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=3, error_score=nan,\n",
+       "             estimator=RandomForestClassifier(bootstrap=True, ccp_alpha=0.0,\n",
+       "                                              class_weight=None,\n",
+       "                                              criterion='gini', max_depth=None,\n",
+       "                                              max_features='auto',\n",
+       "                                              max_leaf_nodes=None,\n",
+       "                                              max_samples=None,\n",
+       "                                              min_impurity_decrease=0.0,\n",
+       "                                              min_impurity_split=None,\n",
+       "                                              min_samples_leaf=1,\n",
+       "                                              min_samples_split=2,\n",
+       "                                              min_weight_fraction_leaf=0.0,\n",
+       "                                              n_estimators=100, n_jobs=None,\n",
+       "                                              oob_score=False, random_state=100,\n",
+       "                                              verbose=0, warm_start=False),\n",
+       "             iid='deprecated', n_jobs=None,\n",
+       "             param_grid=[{'max_depth': array([4, 5, 6]),\n",
+       "                          'max_features': array([3, 4]),\n",
+       "                          'n_estimators': [10, 15]}],\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring='roc_auc', verbose=0)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "clf.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'max_depth': 6, 'max_features': 3, 'n_estimators': 15}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "clf.best_params_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1247,9 +1289,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9462664156037156"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "roc_auc_score(y_test, y_pred_proba)"
    ]
